Migrate deployment from Docker/GitHub Pages to Cloudflare Pages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,19 +35,10 @@ jobs:
           retention-days: 30
 
   deploy:
-    name: Deploy to GitHub Pages
+    name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Download build artifacts
@@ -56,14 +47,10 @@ jobs:
           name: zola-site
           path: public/
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
         with:
-          path: public/
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages deploy .public --project-name=zola-blog
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
