--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,5 +52,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages deploy .public --project-name=zola-blog
+          command: pages deploy public --project-name=zola-blog
           githubToken: ${{ secrets.GITHUB_TOKEN }}
