Refactor projects and notes pages to use TOML data files
- Move project listings to TOML files for Minecraft, math, Rust, and
other categories - Update projects page to render from TOML data files -
Add new notes page with course notes and cheatsheets - Remove
.dockerignore and old projects markdown file - Add table of contents
toggle to about and new pages

--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,7 @@ comment = true
 menu = [
     { name = "About", url = "/about/" },
     { name = "Projects", url = "/projects/" },
+    { name = "Notes", url = "/notes/" },
 ]
 
 [extra.style]
