Add CC BY-SA 4.0 license link to footer copyright

--- a/config.toml
+++ b/config.toml
@@ -63,4 +63,4 @@ social = [
 ]
 
 [extra.footer]
-copyright = "&copy; $YEAR Haichuan Cao"
+copyright = "&copy; $YEAR Haichuan Cao | [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/)"
