--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,23 +34,23 @@ jobs:
           path: public/
           retention-days: 30
 
-  # deploy:
-  #   name: Deploy to Cloudflare Pages
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+  deploy:
+    name: Deploy to Cloudflare Pages
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
-  #   steps:
-  #     - name: Download build artifacts
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: zola-site
-  #         path: public/
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: zola-site
+          path: public/
 
-  #     - name: Publish to Cloudflare Pages
-  #       uses: cloudflare/wrangler-action@v3
-  #       with:
-  #         apiToken: ${{ secrets.CF_API_TOKEN }}
-  #         accountId: ${{ secrets.CF_ACCOUNT_ID }}
-  #         command: pages deploy public --project-name=zola-blog
-  #         githubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages deploy public --project-name=zola-blog
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
